kube/test_app_ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: example-app
  labels: 
    name: hello-app
spec:
  selector:
    matchLabels:
      name: hello-app
  template:
    metadata:
      labels:
        name: hello-app
    spec:
      containers:
        - name: hello-app
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
          - name: config-volume1
            mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume1
          configMap:
            name: nginx-m1

---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: example-app
spec:
  type: ClusterIP
  ports: 
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    name: hello-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: example-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
